--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
   "author": "nikaera",
   "license": "MIT",
   "devDependencies": {
+    "@commitlint/cli": "^17.0.2",
+    "@commitlint/config-conventional": "^17.0.2",
     "@types/glob": "^7.2.0",
     "@types/jest": "^28.1.1",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
